[Omnibox] Round corners of Rich Suggestions

This CL rounds the corners of Rich images with a roundRect clip path.

Bug: 842399
Change-Id: I057d9cabcc46a71efc64145e6b90041e6d1067be
Reviewed-on: https://chromium-review.googlesource.com/1056397
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558599}
Former-commit-id: 6c72cef375c3853bda40bcb45238e16550262e18